# memoricai

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  security_best_practices_report.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
crates/memoricai/: Cargo.toml
crates/memoricai-api/: Cargo.toml
crates/memoricai-api/src/: lib.rs
crates/memoricai-api/src/routes/: admin.rs  analytics.rs  auth.rs  buckets.rs  connections.rs  documents.rs  inferred.rs  memories.rs  misc.rs  mod.rs  oauth.rs  profile.rs  projects.rs  router.rs  search.rs  settings.rs
crates/memoricai-auth/: Cargo.toml
crates/memoricai-auth/src/: lib.rs  oauth.rs
crates/memoricai-client/: Cargo.toml  README.md
crates/memoricai-client/src/: lib.rs
crates/memoricai-client/tests/: live_api.rs
crates/memoricai-connectors/: Cargo.toml
crates/memoricai-connectors/src/: github.rs  gmail.rs  google_drive.rs  granola.rs  lib.rs  notion.rs  oauth.rs  onedrive.rs  s3.rs  sync.rs  web_crawler.rs
crates/memoricai-core/: Cargo.toml
crates/memoricai-core/src/: dto.rs  enums.rs  error.rs  filter.rs  ids.rs  lib.rs  model.rs  network.rs  ports.rs
crates/memoricai-db/: Cargo.toml
crates/memoricai-db/migrations/: 0001_init.sql  0002_performance.sql  0002_phase2_3.sql  0003_hardening.sql  0004_event_dates.sql  0005_lease_fence_and_aggregation.sql  0006_production_hardening.sql
crates/memoricai-db/src/: analytics.rs  auth.rs  buckets.rs  connections.rs  crypto.rs  documents.rs  embeddings.rs  lib.rs  memories.rs  oauth.rs  settings.rs  spaces.rs
crates/memoricai-engine/: Cargo.toml
crates/memoricai-engine/src/: chunk.rs  context.rs  extract.rs  lib.rs  media.rs  memory.rs  pipeline.rs  search.rs
crates/memoricai-mcp/: Cargo.toml
crates/memoricai-mcp/src/: format.rs  lib.rs  prompt.rs  resources.rs  server.rs  tools.rs  wellknown.rs
crates/memoricai-models/: Cargo.toml
crates/memoricai-models/src/: extra.rs  lib.rs  local.rs  openai.rs  testing.rs
crates/memoricai/src/: config.rs  main.rs
crates/memoricai/tests/: admin_provision_e2e.rs  engine_e2e.rs
docs/: api.md  architecture.md  configuration.md  sdk-python.md  sdk-rust.md  sdk-typescript.md
scripts/: locomo.py  longmemeval.py  smoke.py  smoke_phase23.py
sdks/python/: README.md  pyproject.toml
sdks/python/memoricai/: __init__.py
sdks/python/tests/: test_client.py
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/src/: index.ts
sdks/typescript/tests/: client.test.mjs
