[package]
name = "memoricai-api"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
memoricai-core = { workspace = true }
memoricai-db = { workspace = true }
memoricai-models = { workspace = true }
memoricai-engine = { workspace = true }
memoricai-auth = { workspace = true }
memoricai-mcp = { workspace = true }
memoricai-connectors = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
