[package]
name = "memoricai-auth"
publish = false
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
memoricai-core = { workspace = true }
memoricai-db = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
moka = { workspace = true }

[lints]
workspace = true
