[package]
name = "memoricai-client"
description = "Rust SDK for the memoricai /v1 HTTP API"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
memoricai-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
