[package]
name = "memoricai-client"
description = "Rust SDK for memoricai — a self-hostable memory & context engine for AI agents (/v1 HTTP API)"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["memory", "ai", "agents", "llm", "sdk"]
categories = ["api-bindings"]
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
memoricai-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
