[package]
name = "memoricai-db"
publish = false
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
memoricai-core = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
