[package]
name = "memoricai-db"
publish = false
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
memoricai-core = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
aes-gcm = "0.10"
base64 = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
