[package]
name = "memoricai-engine"
publish = false
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
memoricai-core = { workspace = true }
memoricai-db = { workspace = true }
memoricai-models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
blake3 = { workspace = true }
url = { workspace = true }
scraper = { workspace = true }
lopdf = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
