[package]
name = "memoricai-models"
publish = false
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
memoricai-core = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
fastembed = { workspace = true, optional = true }

[features]
local-embeddings = ["dep:fastembed"]

[lints]
workspace = true
