[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memoricai"
version = "0.1.0"
description = "Python SDK for the memoricai /v1 HTTP API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["memoricai*"]
