[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memoricai"
version = "0.1.4"
description = "Python SDK for the memoricai /v1 HTTP API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []
keywords = ["memory", "ai", "agents", "llm", "sdk"]

[project.urls]
Homepage = "https://github.com/trymemoric/memoricai"
Repository = "https://github.com/trymemoric/memoricai"

[tool.setuptools.packages.find]
include = ["memoricai*"]
